Bug 1335149 - Remove unnecessary flush() calls from canvas implementation. r=bas a=gchang

Flushing should usually be done by the moz2d backend unless we're accessing
the data through other mechanisms.

--HG--
extra : source : 90df369672f690a6a0368d36f78ad4462d104278